[package]
name = "mt-gtk-app"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_18"] }

[[bin]]
name = "hello_world"
path = "hello_world/main.rs"

[[bin]]
name = "memory_management"
path = "memory_management/main.rs"

[[bin]]
name = "sub_classing"
path = "sub_classing/main.rs"
